Fix Network panel alignment

--- a/chrome/skin/classic/shared/netmonitor.css
+++ b/chrome/skin/classic/shared/netmonitor.css
@@ -35,11 +35,6 @@ be toggle-side-panels button at the end at some point */
   background-color: white;
 }
 
-.theme-firebug #network-table .side-menu-widget-container {
-  font-family: Lucida Grande, Tahoma, sans-serif;
-  font-size: 11px;
-}
-
 .theme-firebug #requests-menu-toolbar {
   height: 16px;
 }
@@ -127,10 +122,6 @@ be toggle-side-panels button at the end at some point */
 
 .theme-firebug .requests-menu-subitem.requests-menu-status-and-method {
   color: rgb(128, 128, 128);
-}
-
-.theme-firebug .requests-menu-subitem.requests-menu-size {
-  text-align: right;
 }
 
 /******************************************************************************/
